Add dom json as a getter

--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <link rel="stylesheet" href="common/css/style.css">
   </head>
   <body class="enp-editor_body">
-    <div class="enp-editor_wrapper">
-        <div class="enp-editor_scene">
-            <div id="app"></div>  
-        </div>
-    </div>
+    <div id="app"></div> 
+    <script src="node_modules/domjson/dist/domjson.min.js"></script>
     <script src="build.js"></script>
   </body>
 </html>
