--- a/index.html
+++ b/index.html
@@ -6,10 +6,32 @@
     <meta charset="utf-8">
     <title>Vueditor</title>
     <link rel="stylesheet" href="common/css/style.css">
+    <style type="text/css" media="screen">
+    #editor { 
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+</style>
   </head>
   <body class="enp-editor_body">
     <div id="app"></div> 
+    <div id="editor">function foo(items) {
+      var x = "All this is syntax highlighted";
+      return x;
+    }</div>
+    
+
+  
     <script src="node_modules/domjson/dist/domjson.min.js"></script>
+    <script src="node_modules/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="build.js"></script>
+    <script>
+      var editor = ace.edit("editor");
+      editor.setTheme("ace/theme/monokai");
+      editor.getSession().setMode("ace/mode/javascript");
+  </script>
   </body>
 </html>
